llamastack/operators-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redhat-ods-operator
