llamastack/all-in-one.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: lsd-llama-milvus-service
  namespace: llamastack
spec:
  host: lsd-llama-milvus-service-llamastack.apps.cluster-2r85j.2r85j.sandbox1882.opentlc.com
  path: /
  port:
    targetPort: http
  tls:
    termination: edge
  to:
    kind: Service
    name: lsd-llama-milvus-service
    weight: 100
  wildcardPolicy: None
